--- a/static/scss/_components.scss
+++ b/static/scss/_components.scss
@@ -93,6 +93,10 @@ body {
     }
 }
 
+.btn--remove {
+    padding: 5px;
+}
+
 .btn_to-top {
     position: fixed;
     bottom: 40px;
